--- a/Jupyter_Notebook/RegEx.ipynb
+++ b/Jupyter_Notebook/RegEx.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -521,6 +521,96 @@
     "    result = result ** 0.5\n",
     "    return result\n",
     "l2_dist(np.reshape(a,(20*20)), np.reshape(b,(20*20,1)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[[0 0 1]\n [1 1 1]]\n[[0 0 1]\n [1 1 1]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "old = np.array([[1, 1, 1], [1, 1, 1]])\n",
+    "new = old\n",
+    "new[0, :2] = 0\n",
+    "print(old)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = 'ACAABAACAAAB'\n",
+    "result = re.findall('A{1,2}', s)\n",
+    "L = len(result)\n",
+    "print(L)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "text=r'''Everyone has the following fundamental freedoms:\n",
+    "    (a) freedom of conscience and religion;\n",
+    "    (b) freedom of thought, belief, opinion and expression, including freedom of the press and other media of communication;\n",
+    "    (c) freedom of peaceful assembly; and\n",
+    "    (d) freedom of association.'''\n",
+    "\n",
+    "pattern = '\\(.\\)'\n",
+    "print(len(re.findall(pattern,text)))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "(4,)\n(4, 1)\n(1, 4)\n(3,)\n[1. 2. 3. 4.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a1 = np.random.rand(4)\n",
+    "a2 = np.random.rand(4, 1)\n",
+    "a3 = np.array([[1, 2, 3, 4]])\n",
+    "a4 = np.arange(1, 4, 1)\n",
+    "a5 = np.linspace(1 ,4, 4)\n",
+    "print(a1.shape)\n",
+    "print(a2.shape)\n",
+    "print(a3.shape)\n",
+    "print(a4.shape)\n",
+    "print(a5)\n"
    ]
   },
   {
